--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/main.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/common.js"></script>
@@ -14,6 +15,47 @@
 <script src="js/rollmain.js"></script>
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
+<style>
+/* 모바일영역 */
+/* 헤더영역 */
+.on {
+	background: #32353d;
+}
+header {
+	height: 90px;
+	text-align: center;
+	z-index: 200;
+	background: rgba(0,0,0,0.5);
+	position: absolute;
+	left:0; top:0;
+	width:100%;
+}
+.box_inner {
+	width: 100%; margin: 0 auto;
+}
+/* 로고영역 */
+.header_area h1 {
+	float: none;
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	padding: 3px 0 0;
+}
+.header_area h1 a {
+	display: inline-block;
+	width: 150px;
+	height: 80px;
+	background: url(./img/main_logo.png) no-repeat;
+	background-size: 150px 40px !important;
+	background-position: center center !important;
+	text-indent: -9999px;
+	overflow: hidden;
+}
+/* //로고영역 */
+
+/* //헤더영역 */
+/* //모바일영역 */
+</style>
 </head>
 <body>
 
