--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ header {
 	float:none;
 	width:100%;
 	background-color: #31353d;
-	display:block;
+	display:none;
 }
 .closePop {
 	display: block;
@@ -89,6 +89,64 @@ header {
 	background-size: 60px;
 
 }
+.util {padding:20px;}
+.header_cont a { color:white;}
+.util li {float:left;}
+
+.util li::after{ /* 가상 요소*/
+	content:'|';
+	display: inline-block;
+	padding: 0 10px;
+	color: #a2a2a3;
+	font-size: 10px;
+	position: relative;
+	top:-2px;
+}
+.util li:last-child::after {
+  content: '';
+  display: none;
+}
+.gnb {
+	float:none;
+	box-sizing: border-box;
+	padding-top: 0px;
+	height:auto;
+	border-top: 1px solid #83868b;
+}
+.gnb li{
+	float: left;
+	width:50%;
+	text-align: left;
+	box-sizing: border-box;
+	border-bottom:solid 1px #83868b;
+}
+.gnb li a {
+	display: block;
+	padding: 0 0 0 65px;
+	height: 60px;
+	line-height: 60px;
+	background: url(img/ico_gnb01.png) no-repeat 10px center;
+	background-size: 49px 56px;
+	
+}
+/* 상단 메뉴 숨겨지는 영역 */
+.gnb_depth{
+	display: none;
+}
+
+.gnb li + li a {
+	background-image: url(img/ico_gnb02.png);
+}
+.gnb li + li + li a{
+	background-image: url(img/ico_gnb03.png);
+}
+.gnb li + li + li +li a{
+	background-image: url(img/ico_gnb04.png);
+}
+.gnb li:nth-child(2n+1){ /*홀수번째 li에*/
+	border-right: solid 1px #84868b;
+}
+
 /* //로고영역 */
 
 /* //상단메뉴영역 */
@@ -104,6 +162,23 @@ header {
 /* //헤더영역 */
 /* //모바일영역 */
 </style>
+<script>
+	// 콜백함수. 문서가 준비 되면 - 함수 실행 (창 틀자마자 실행됨)
+	$(document).ready(function(){
+		// alert('콜백함수');
+		$(".openMOgnb").click(function(){
+			$("header").addClass("on");
+			// $(".header_cont").css("display","block"); /* css display 속성을 block 으로... */
+			$(".header_cont").slideDown();
+		});
+		$(".closePop").click(function(){
+			$("header").removeClass("on");
+			$(".header_cont").slideUp();
+		});
+		//header 아이디 영역 백그라운드 추가
+		
+	});
+</script>
 </head>
 <body>
 
