--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/main.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
-<script src="js/common.js"></script>
+<script src="js/main.js"></script>
 <!-- 슬라이드용 -->
 <link rel="stylesheet" href="css/swiper.min.css">
 <script src="js/rollmain.js"></script>
@@ -17,167 +17,15 @@
 <!-- //슬라이드용 --> 
 <style>
 /* 모바일영역 */
-/* 헤더영역 */
-.on {
-	background: #32353d;
-}
-header {
-	height: 90px;
-	text-align: center;
-	z-index: 200;
-	background: rgba(0,0,0,0.5);
-	position: absolute;
-	left:0; top:0;
-	width:100%;
-}
-.box_inner {
-	width: 100%; margin: 0 auto;
-}
-/* 로고영역 */
-.header_area h1 {
-	float: none;
-	width: 100%;
-	height: 50px;
-	text-align: center;
-	padding: 3px 0 0;
-}
-.header_area h1 a {
-	display: inline-block;
-	width: 150px;
-	height: 80px;
-	background: url(./img/main_logo.png) no-repeat;
-	background-size: 150px 40px !important;
-	background-position: center center !important;
-	text-indent: -9999px;
-	overflow: hidden;
-}
-.hdd{
-	text-indent:-9999px; /* 들여쓰기 화면에서는 없어지지만 시각장애인을 위한 스크린리더를 위해 만듦 */
-	position: absolute;
-}
-.openMOgnb span{
-	box-sizing: border-box; /* 박스 크기를 지정하는 조건. 박스 크기에 border을 합함 */
-	display : block;
-	width: 25px; height:3px;
-	margin-bottom: 4px;
-	border-radius: 10px;
-	background: #fff;
-
-}
-.openMOgnb span + span {width:17px;} /*두번째꺼 짧게 하기*/
-.openMOgnb span:last-child {width:25px; margin-bottom: 0px;} /*세번째꺼 길게 되돌리기*/
-
-.header_cont {
-	float:none;
-	width:100%;
-	background-color: #31353d;
-	display:none;
-}
-.closePop {
-	display: block;
-	position: absolute;
-	right:0;
-	top:15px;
-}
-.closePop a {
-	display: block;
-	width: 60px;
-	height: 60px;
-	text-indent: -9999px;
-	overflow: hidden; /* 클 때 넘치지 않게 */
-	background: url(img/btn_closeMenu.png) no-repeat;
-	background-size: 60px;
-
-}
-.util {padding:20px;}
-.header_cont a { color:white;}
-.util li {float:left;}
-
-.util li::after{ /* 가상 요소*/
-	content:'|';
-	display: inline-block;
-	padding: 0 10px;
-	color: #a2a2a3;
-	font-size: 10px;
-	position: relative;
-	top:-2px;
-}
-.util li:last-child::after {
-  content: '';
-  display: none;
-}
-.gnb {
-	float:none;
-	box-sizing: border-box;
-	padding-top: 0px;
-	height:auto;
-	border-top: 1px solid #83868b;
-}
-.gnb li{
-	float: left;
-	width:50%;
-	text-align: left;
-	box-sizing: border-box;
-	border-bottom:solid 1px #83868b;
-}
-.gnb li a {
-	display: block;
-	padding: 0 0 0 65px;
-	height: 60px;
-	line-height: 60px;
-	background: url(img/ico_gnb01.png) no-repeat 10px center;
-	background-size: 49px 56px;
-	
-}
-/* 상단 메뉴 숨겨지는 영역 */
-.gnb_depth{
-	display: none;
-}
-
-.gnb li + li a {
-	background-image: url(img/ico_gnb02.png);
-}
-.gnb li + li + li a{
-	background-image: url(img/ico_gnb03.png);
-}
-.gnb li + li + li +li a{
-	background-image: url(img/ico_gnb04.png);
-}
-.gnb li:nth-child(2n+1){ /*홀수번째 li에*/
-	border-right: solid 1px #84868b;
-}
 
 /* //로고영역 */
 
-/* //상단메뉴영역 */
-.openMOgnb{
-	display: block;
-	position: absolute; 
-	left:15px;
-	top:35px;
-	width:25px;
-	height:16px;
-}
 
-/* //헤더영역 */
+
 /* //모바일영역 */
 </style>
 <script>
-	// 콜백함수. 문서가 준비 되면 - 함수 실행 (창 틀자마자 실행됨)
-	$(document).ready(function(){
-		// alert('콜백함수');
-		$(".openMOgnb").click(function(){
-			$("header").addClass("on");
-			// $(".header_cont").css("display","block"); /* css display 속성을 block 으로... */
-			$(".header_cont").slideDown();
-		});
-		$(".closePop").click(function(){
-			$("header").removeClass("on");
-			$(".header_cont").slideUp();
-		});
-		//header 아이디 영역 백그라운드 추가
-		
-	});
+
 </script>
 </head>
 <body>
@@ -254,7 +102,7 @@ header {
                         <div class="roll_content">
                             <a href="javascript:;">
                             <img src="img/img_slidecontents01.png" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
-                            <p class="roll_txtline">OOOO OOOOOOOOO OOOOOOOOO OOOOO</p>
+                            <p class="roll_txtline">뚜뚜루뚜뚜뚜 키씽유 베이베</p>
                         </div>
                     </li>
                     <li class="imglist1">
