모바일용 최근 게시물 영역

--- a/index.html
+++ b/index.html
@@ -16,13 +16,90 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
-/* 모바일영역 */
-
-/* //로고영역 */
-
 
 
 /* //모바일영역 */
+
+/* 본문 컨테이너 영역*/
+#container, #footer, .hdd, .quick_area {
+	text-align: center;
+}
+#container {
+	position: relative;
+	width: 100%;
+	padding-bottom: 30px;
+}
+
+.main_rolling_pc{display: none;} /* pc 슬라이드 영역 */
+
+/* 모바일 슬라이드 영역 */
+.main_rolling_mobile{
+	display: block;
+}
+.swiper-slide img { width: 100%;}
+.swiper-pagination-bullet { 
+	width:5px; height:5px; 
+	margin:0 3px !important; 
+	background-color: white; 
+	opacity: 0.2; /* 기본 투명도 */}
+.swiper-pagination-bullet-active {opacity: 1;} /* 활성화 된 bullet의 투명도 */
+
+/* 갤러리 최근 게시물 영역 */
+
+.about_area h2{
+	padding: 27px 0 25px;
+	font-size: 20px;
+	
+}
+.about_area h2 b{
+	padding-top: 10px;
+	display: block;
+	font-weight: bold;
+}
+
+.about_box{
+	background-color: white;
+}
+.place_list li {
+	float: none; /* 플로트가 있을지도 모르니 none 처리*/
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	padding : 0 20px;
+}
+.place_list li img{
+	width: 100%;
+}
+
+.place_list li h3 {
+	font-weight: bold;
+	font-size: 18px;
+	padding-top: 20px;
+}
+.place_list p.txt { /* txt라는 클래식 형태의 p태그 */
+	padding: 10px 50px 30px;
+	line-height : 1.4;
+	box-sizing: border-box;
+	width: 100%;
+	overflow: hidden;
+	word-break : keep-all; /* 단어가 끊기지 않게 줄맞춤 */
+	color:#666;
+}
+
+.place_list .view{
+	border-top: #333 solid 2px;
+	box-sizing: border-box;
+	margin: 0 0 30px;
+	display: inline-block;
+	padding-top:5px;
+	color:#666;
+}
+
+/* //갤러리 최근 게시물 영역 */
+
+/* //본문 컨테이너 영역 */
+
+
 </style>
 <script>
 
@@ -159,7 +236,7 @@
 	
 		<!-- 갤러리최근게시물영역 -->
 		<div class="about_area">
-			<h2>OOOO OOOOO 스프링 <b>TOP 3</b></h2>
+			<h2>갤러리 최근 게시물 <b> TOP 3</b></h2>
 			<div class="about_box">
 				<ul class="place_list box_inner clear">
 					<li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
