모바일 공지사항 최근 게시물 영역

--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
 	color:#666;
 }
 
+/* 공지사항최근게시물영역 */
+.app_line {display: none;}
+.appbbs_area{
+	padding: 0 20px;
+	text-align: left;
+}
+.bbs_line{
+	float: none; /*그냥 무의식적으로 하면 됨*/
+	width: 100%;
+	padding: 20px 0;
+	border-top:solid 1px #d6d7d8;
+}
+.bbs_line h3{
+	font-weight: bold;
+	font-size: 19px;
+}
+.bbsline .notice_recent {padding-top : 10px;}
+.bbs_line .notice_recent li{
+	padding : 8px 0;
+	list-style: circle;
+}
 /* //갤러리 최근 게시물 영역 */
 
 /* //본문 컨테이너 영역 */
