오전 푸터 작업중

--- a/index.html
+++ b/index.html
@@ -31,6 +31,44 @@
 
 }
 
+/* 푸터영역 */
+footer{
+	border-top: 1px solid #ddd;
+}
+.foot_area {
+	box-sizing: border-box;
+	padding: 0 20px 90px;
+	position: relative;
+}
+.foot_list{
+	padding-top: 25px;
+}
+.foot_list li{
+	float: left;
+}
+.foot_list li:first-child::after{
+	content: "|";
+	display: inline-block;
+	padding: 0 10px;
+	font-size: 10px;
+	position: relative;
+	top: -2px;
+}
+.foot_list li a {
+	font-weight: bold;
+	font-size: 15px;
+}
+
+.foot_area h2{
+	color: #666;
+	padding-top: 15px;
+	font-size: 14px;
+}
+.addr {
+	line-height: ;
+}
+
+/* //푸터영역 */
 
 </style>
 <script>
