모바일영역 fin

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
+/* 태블릿영역 */
 
+/* //태블릿영역 */
 </style>
-<script>
-$(document).ready(function(){
-	$(".s_point").smoothScroll();
-});
-</script>
+
+
 </head>
 <body>
 
