tablet용 슬라이드이미지 처리 작업중

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/tablet.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
@@ -16,9 +17,60 @@
 <script src="js/jquery.easing.js"></script>	
 <!-- //슬라이드용 --> 
 <style>
+
+
+
 /* 태블릿영역 */
+@media all and (min-width: 801px) {
+/* 컨테이너영역 */
+
+#container{
+	padding-bottom: 20px;
+	width: initial;
+	position:initial
+}
+
+/* //컨테이너영역 */
+/* 슬라이드영역 */
+.main_rolling_mobile{display: none;}
+.main_rolling_pc{display: block;}
+.visualRoll{
+	position: relative;
+	width: 100%;
+}
+.viewImgList{
+	position: relative;
+	width: 100%;
+}
+ul.viewImgList li {
+	text-align: center;
+	height: 550px;
+	line-height: 550px;
+	background-size: cover;
+	width: 100%;
+	position: relative;
+	z-index: 50;
+}
+
+
+.roll_content a img {display:none; width: 100%;} /* 밑쪽 스크롤 바 없애기 */
+
+li.imglist0 {
+	background: url(./img/maple.jpg) no-repeat;
+}
+.imglist1{
+	background: url(./img/img_slidecontents02.png) no-repeat;
+}
+.imglist2{
+	background: url(./img/img_slidecontents03.png) no-repeat;
+}
+
+/* //슬라이드영역 */
+}
 
 /* //태블릿영역 */
+
+
 </style>
 
 
@@ -96,7 +148,7 @@
                     <li class="imglist0">
                         <div class="roll_content">
                             <a href="javascript:;">
-                            <img src="img/img_slidecontents01.png" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
+                            <img src="img/maple.jpg" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
                             <p class="roll_txtline">뚜뚜루뚜뚜뚜 키씽유 베이베</p>
                         </div>
                     </li>
