--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/tablet.css">
+<link rel="stylesheet" href="css/pc.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
@@ -21,7 +22,7 @@
 
 
 
-@media all and (min-width: 801px) {
+@media all and (min-width: 1066px) {
 
 /* 태블릿영역 */
 
