--- a/index.html
+++ b/index.html
@@ -23,10 +23,73 @@
 
 
 @media all and (min-width: 1066px) {
+  /* pc용 스타일 */
+  /* 상단 로고, 메뉴 영역 */
+.header_area h1 {padding-left: 0;}
+.header_cont {width: 769px; padding-right: 10px;}
+.gnb li a{
+	padding:26px 40px;
+}
+.gnb_depth{
+	position: absolute;
+	left: 0;
+	top: 113px;
+	width: 100%;
+	background: rgba(250,100,0,0.85);
+	z-index: 100;
+	/* display: block; 서브메뉴 확인용*/
+}
 
-/* 태블릿영역 */
+.gnb_depth2_1 .submenu_list{
+	padding-left: 480px;
+}
+.gnb_depth2_2 .submenu_list{
+	padding-left: 600px;
+}
+.gnb_depth2_3 .submenu_list{
+	padding-left: 730px;
+}
+.gnb_depth2_4 .submenu_list{
+	padding-left: 900px;
+}
+.submenu_list{
+	box-sizing: border-box;
+	width: 1050px;
+	margin:0 auto;
+	text-align: left;
+}
+ /* //상단 로고, 메뉴 영역 */
+ /* 갤러리, 공지사항 최근게시물 영역 */
 
-/* //태블릿영역 */
+.place_list{padding: 0;}
+.appbbs_box{padding:0;}
+.app_line a, .app_line a + a{
+	text-align: center;
+	background-position: 20px 50%;
+}
+ /* //갤러리, 공지사항 최근게시물 영역 */
+/* 푸터영역 */
+.foot_area{
+	padding-left: 0;
+	padding-right: 0;
+}
+.foot_area .snslink{top:50px;}
+.foot_area .snslink li {margin-left: 60px;}
+/* //푸터영역 */
+
+/* 퀵메뉴 */
+.quick_list{
+	display: inherit;
+	position: initial;
+	left:initial;
+	width: initial;
+}
+.quick_list li{
+	float:none; width: initial;
+	text-align: center;
+}
+/* //퀵메뉴 */
+  /* //pc용스타일 */
 }
 
 
