--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
 /* //푸터영역 */
 
 /* 퀵메뉴 */
+.quick_area{
+	position: fixed;
+	top:171px;
+	right: 0px;
+	width: 94px;
+	z-index: 100;
+}
 .quick_list{
 	display: inherit;
 	position: initial;
@@ -87,6 +94,57 @@
 .quick_list li{
 	float:none; width: initial;
 	text-align: center;
+}
+.quick_list li a {
+	border-top: 1px solid #4d4d4d;
+	padding:15px 0;
+}
+.quick_list li:first-child{border-top: none;}
+.quick_list li+li {width: initial;}
+.quick_list li+li+li {width: initial;}
+.quick_list li+li+li+li {width: initial;}
+.quick_list li:first-child::after{
+	content: none;
+}
+.quick_list li:last-child::before{content: none;}
+.quick_list li::after{content: none;}
+.quick_list li a h3{
+	padding-bottom: 10px;
+	color:#ddd;
+	letter-spacing: -2px;
+	height: initial;
+	line-height: initial;
+	padding-left: initial;
+	background: none;
+}
+.quick_list li + li a h3 {
+	background: none;
+}
+.quick_list li + li +li a h3 {
+	background: none;
+}
+.quick_list li a p {
+	display: inherit;
+	line-height: 1.3;
+	font-size: 12px;
+	color: white;
+}
+.to_top{
+	position: inherit; /*fixed -> relative*/
+	right: initial;
+	bottom: initial;
+	background: white;
+}
+.to_top a {
+	display: block;
+	width: 94px;
+	box-sizing: border-box;
+	text-indent: -9999px;
+	overflow: hidden;
+	border-left:1px solid #a3a3a3;
+	border-bottom: 1px solid #a3a3a3;
+	background:url(./img/ico_totop.png) no-repeat center;
+	background-size: 50%;
 }
 /* //퀵메뉴 */
   /* //pc용스타일 */
