--- a/board_list.html
+++ b/board_list.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/tablet.css">
 <link rel="stylesheet" href="css/pc.css">
+<link rel="stylesheet" href="css/board.css">
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/jquery.smooth-scroll.min.js"></script>
 <script src="js/main.js"></script>
@@ -24,15 +25,10 @@
   /* //pc용스타일 */
 }
 
-
-
-
 </style>
-
-
 </head>
 <body>
-
+	
 <!-- 헤더에서푸터까지 -->
 <div id="wrap">
 	<!-- 헤더상단메뉴영역영역 -->
@@ -202,6 +198,7 @@
 	<!-- //메이콘텐츠영역 -->
 	
 	<!-- 푸터메뉴및사업자정보영역 -->
+
 	<footer>
 		<div class="foot_area box_inner">
 			<ul class="foot_list clear">
