--- a/board_write.html
+++ b/board_write.html
@@ -98,6 +98,7 @@ $(document).ready(function() {
 			</div>
 		</div>	
 		<!-- //메인상단위치표시영역 -->
+
 		<!-- 메인본문영역 -->
 		<div class="bodytext_area box_inner">
 			<!-- 폼영역 -->
@@ -111,7 +112,7 @@ $(document).ready(function() {
 							<div class="app_content"><input type="text" name="title" class="w100p" id="title_lbl" placeholder="제목을 입력해주세요" required/></div>
 						</li>
 						<li class="clear">
-							<label for="content_lbl" class="tit_lbl pilsoo_item" >내용</label>
+							<label for="content_lbl" class="tit_lbl pilsoo_item">내용</label>
 							<div class="app_content"><textarea name="content" id="content_lbl" class="w100p" placeholder="내용을 입력해주세요." required></textarea></div>
 						</li>
 						<li class="clear">
@@ -121,7 +122,7 @@ $(document).ready(function() {
 
 					</ul>
 					<p class="btn_line">
-					<button class="btn_baseColor">등록</button> <!--submit이 발생-->
+					<button class="btn_baseColor">등록</button>
 					<a href="board_list.html" class="btn_baseColor">목록</a>
 					</p>	
 				</fieldset>
@@ -129,7 +130,6 @@ $(document).ready(function() {
 			<!-- //폼영역 -->
 		</div>
 		<!-- //메인본문영역 -->
-		
 	</div>
 	<!-- //메이콘텐츠영역 -->
 	<!-- 푸터메뉴및사업자정보영역 -->
