--- a/index.html
+++ b/index.html
@@ -19,21 +19,12 @@
 <!-- //슬라이드용 --> 
 <style>
 
-
-
-
-@media all and (min-width: 1066px) {
-  /* pc용 스타일 */
-
-  /* //pc용스타일 */
-}
-
-
-
-
 </style>
-
-
+<script>
+$(document).ready(function() {
+	
+});
+</script>
 </head>
 <body>
 
@@ -109,7 +100,7 @@
                         <div class="roll_content">
                             <a href="javascript:;">
                             <img src="img/maple.jpg" alt="OOOO OOOOO OOOO OOOOO, 스프링... OOOO OOOOO?"></a>
-                            <p class="roll_txtline">뚜뚜루뚜뚜뚜 키씽유 베이베</p>
+                            <p class="roll_txtline">OOOO OOOOOOOOO OOOOOOOOO OOOOO</p>
                         </div>
                     </li>
                     <li class="imglist1">
@@ -166,7 +157,7 @@
 	
 		<!-- 갤러리최근게시물영역 -->
 		<div class="about_area">
-			<h2>갤러리 최근 게시물 <b> TOP 3</b></h2>
+			<h2>겔러리 최근 게시물 <b>TOP 3</b></h2>
 			<div class="about_box">
 				<ul class="place_list box_inner clear">
 					<li><a href="#" onclick="$('.popup_base').css('height',$(document).height());$('.contact_pop').show();">
