--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@ $(document).ready(function() {
                 <div class="swiper-wrapper">
                 	<!-- 슬라이드이미지영역 -->
                     <div class="swiper-slide">
-                        <a href="javascript:;"><img src="img/mainslide_mob01.jpg" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
+                        <a href="javascript:;"><img src="img/slide_01.png" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:;"><img src="img/mainslide_mob02.jpg" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
+                        <a href="javascript:;"><img src="img/slide_02.png" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="javascript:;"><img src="img/mainslide_mob03.jpg" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
+                        <a href="javascript:;"><img src="img/slide_03.png" alt="OOOO OOOOO 믿을 수 있는 스프링정보, 스프링... OOOO OOOOO?" /></a>
                     </div>
                     <!-- //슬라이드이미지영역 -->
                 </div>						
